src/test/ui/suggestions/path-display.stderr
error[E0277]: `Path` doesn't implement `std::fmt::Display`
  --> $DIR/path-display.rs:5:20
   |
LL |     println!("{}", path);
   |                    ^^^^ `Path` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Path`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `std::fmt::Display` for `&Path`
   = note: required by `std::fmt::Display::fmt`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
